# whydatapp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: release.yml
docs/guide/: configuration.md  development.md  install.md  troubleshooting.md  usage.md  web-ui.md
docs/superpowers/plans/: 2026-04-29-plan-1-core-cli.md  2026-04-29-plan-2-web-ui.md  2026-04-29-plan-3-distribution-init.md
docs/superpowers/specs/: 2026-04-29-whydatapp-design.md
scripts/: rebuild-css-if-templates-changed.sh
src/why/: __main__.py  autostart.py  bootstrap.py  capture.py  cli.py  config.py  detect.py  hook_runner.py  humanize.py  init_wizard.py  markdown.py  paths.py  presentation.toml  project_infer.py  prompts.py  redact.py  resolve.py  schema.py  store.py
src/why/migrations/: 001_init.sql  002_reinstall_columns.sql  003_purposes.sql  004_command_history.sql  005_removed_at.sql
src/why/shells/: hook.bash  hook.fish  hook.zsh  installer.py
src/why/web/: app.py  csrf.py  deps.py  filters.py  templates_env.py
src/why/web/routes/: dashboard.py  export.py  installs.py  review.py  settings.py  share.py
src/why/web/static/css/: tailwind.css  tailwind.src.css
src/why/web/static/fonts/: OFL.txt
src/why/web/templates/: base.html  dashboard.html  install_edit.html  install_row.html  installs.html  installs_table.html  review.html  settings_purposes.html
src/why/web/templates/components/: button.html  card.html  checkbox.html  empty_state.html  filter_bar.html  input.html  manager_badge.html  nav_link.html  pill.html  select.html
tests/: conftest.py
tests/integration/: test_cli.py  test_hook_shell.py  test_init.py  test_uninstall.py  test_web.py
tests/unit/: test_autostart.py  test_capture_removal.py  test_config.py  test_detect.py  test_detect_uninstall.py  test_hook_uninstall.py  test_humanize.py  test_markdown.py  test_paths.py  test_project_infer.py  test_prompts.py  test_purposes.py  test_redact.py  test_resolve.py  test_schema.py  test_store.py  test_store_history.py  test_store_removal.py  test_web_filters.py
