[project]
name = "why-cli"
version = "0.1.0"
description = "Track why you installed every tool on your machine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "tomli-w>=1.0",
]

[project.scripts]
why = "why.cli:app"

[project.optional-dependencies]
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/why"]

[tool.hatch.build.targets.wheel.force-include]
"src/why/migrations" = "why/migrations"
"src/why/presentation.toml" = "why/presentation.toml"
"src/why/web/templates" = "why/web/templates"
"src/why/web/static" = "why/web/static"
"src/why/shells" = "why/shells"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/why"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
