[project]
name = "why-cli"
version = "1.1.1"
description = "Track why you installed every tool on your machine."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mark Jędrzejczyk" }]
keywords = ["cli", "shell", "homebrew", "npm", "pip", "install-tracking", "documentation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/Nostoi/whydatapp"
Repository = "https://github.com/Nostoi/whydatapp"
Issues = "https://github.com/Nostoi/whydatapp/issues"
Documentation = "https://github.com/Nostoi/whydatapp/tree/main/docs/guide"
Changelog = "https://github.com/Nostoi/whydatapp/releases"

[project.scripts]
why = "why.cli:app"

[project.optional-dependencies]
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/why"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/why"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
